--- a/index.html
+++ b/index.html
@@ -7,20 +7,35 @@
     <title>TO-DO LIST</title>
 </head>
 <body>
-    <button id = "cambio-color">
+    <button id="cambio-color">
         <img src="imgs/dark_mode_24dp_1F1F1F_FILL1_wght400_GRAD0_opsz24.svg" alt="darkmode">
         <img src="imgs/light_mode_24dp_FFFFFF_FILL1_wght400_GRAD0_opsz24.svg" alt="lightmode">
     </button>
-    <div id="agregarTask">
-        <label for="tarea">Ingrese la tarea que desea incluir: </label>
-        <input type="text" name="tarea" id="tarea">
-        <button id="addTaskBoton">Agregar</button>
-        <div id="tareas">
-            <h2>Tareas no completadas:</h2>
-            <ul id="tareasDisplay"></ul>
+    <div id="sectorTareas">
+        <div id="agregarTask">
+            <label for="tarea">Ingrese la tarea que desea incluir: </label>
+            <input type="text" name="tarea" id="tarea">
+            <button id="addTaskBoton">Agregar</button>
+            <div id="tareas">
+                <h2>Tareas no comenzadas:</h2>
+                <ul id="tareasDisplay"></ul>
+            </div>
+        </div>
+        <div id="mostrarIncompletas">
+            <div id="tareas">
+                <h2>Tareas no completadas:</h2>
+                <ul id="tareasDisplay"></ul>
+            </div>
+        </div>
+        <div id="mostrarTerminadas">
+            <div id="tareas">
+                <h2>Tareas completadas:</h2>
+                <ul id="tareasDisplay"></ul>
+            </div>
+            <button class="eliminar-btn" onclick="eliminartareascompletadas()">Eliminar todas las tareas completadas</button>
         </div>
     </div>
-
+    <div id="tareaMasRapida"></div>
 <script src="script.js"></script>
 </body>
 </html>
