--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <title>TO-DO LIST</title>
 </head>
 <body>
+    <h1 class="animate__animated animate__rotateInDownLeft">TO DO LIST</h1>
     <button id="cambio-color">
         <img src="imgs/dark_mode_24dp_1F1F1F_FILL1_wght400_GRAD0_opsz24.svg" alt="darkmode">
         <img src="imgs/light_mode_24dp_FFFFFF_FILL1_wght400_GRAD0_opsz24.svg" alt="lightmode">
